-----------------------
* Mock name in @Mock(name="abc") annotations are no longer ignored for the Mockito API extension
* Fixed NPE in withArguments() constructor (thanks to Tomoyuki Saito for pull request)
* Upgraded Javassist dependency to version 3.20.0-GA.
* Using soft reference in classloader cache
* MockClassloader now extends Javassist Loader classloader to implement findClass etc

Change log 1.6.2 (2015-01-03)
----------------------------
* PowerMockRunnerDelegate annotation now uses @Inherited (thanks to Henrik Kaipe for pull request)
* Tests can now have multiple constructors (thanks to Henrik Kaipe for pull request)
* Cleanup pom files and added version numbers (thanks to René Scheibe for pull request)
* Fix "Test class can only have one constructor" issue that occurs when a JUnit or 3rd-party delegate runner (specified by a PowerMockRunnerDelegate annotation) can only deal with one public constructor. (thanks to Henrik Kaipe for pull request)
* Packaged some of the Mocktio classes internally since Mockito is moving from CgLib to ByteBuddy. (thanks to Brice Dutheil for the pull request).
* Upgraded Javassist dependency to version 3.19.0-GA.
* Upgraded TestNG dependency to version 6.8.21.
* The PowerMock EasyMock Api now depends on EasyMock 3.3.1.

Change log 1.6.1 (2015-01-03)
----------------------------
* The PowerMock EasyMock Api now depends on EasyMock 3.3. Note that 1.6.0 also works with this version of EasyMock _if_ cglib-nodep 2.2.2 is used as EasyMock transitive dependency.
* PowerMock JUnit Module now supports JUnit 4.12 (Thanks to Henri Tremblay for the pull request).
* Upgraded TestNG from 6.8.8 to 6.8.13.
* Fixed Mockito 1.10.9+ incompatibility, by repackaging CGLIB MockMaker (issue 524). Thanks to Brice Dutheil for the pull request.

Change log 1.6.0 (2014-11-27)
-----------------------------
* It's now possible to verify private final overloaded methods in the Mockito Extension API. For example: