@@ -12,21 +12,20 @@
  */
 package org.powermock.core.classloader;
 
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-
 import javassist.ClassClassPath;
 import javassist.ClassPool;
 import javassist.CtClass;
-
 import org.powermock.core.ClassReplicaCreator;
 import org.powermock.core.WildcardMatcher;
 import org.powermock.core.classloader.annotations.UseClassPathAdjuster;
 import org.powermock.core.spi.PowerMockPolicy;
 import org.powermock.core.spi.support.InvocationSubstitute;
 import org.powermock.core.transformers.MockTransformer;
+
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Mock all classes except system classes.
@@ -36,7 +35,7 @@ import org.powermock.core.transformers.MockTransformer;
  * <li>system classes are deferred to another classloader</li>
  * <li>testing framework classes are loaded, but not modified</li>
  * </ol>
- * 
+ *
  * @author Johan Haleby
  * @author Jan Kronquist
  */
@@ -59,35 +58,35 @@ public class MockClassLoader extends DeferSupportingClassLoader {
      * Classes not deferred but loaded by the mock class loader but they're not
      * modified.
      */
-    private final String[] packagesToLoadButNotModify = new String[] { "org.junit.", "junit.", "org.easymock.",
+    private final String[] packagesToLoadButNotModify = new String[]{"org.junit.", "junit.", "org.easymock.",
             "net.sf.cglib.", "javassist.",
             "org.powermock.modules.junit4.internal.", "org.powermock.modules.junit4.legacy.internal.",
             "org.powermock.modules.junit3.internal.",
-            "org.powermock" };
+            "org.powermock"};
 
-    private final String[] specificClassesToLoadButNotModify = new String[] { InvocationSubstitute.class.getName(),
+    private final String[] specificClassesToLoadButNotModify = new String[]{InvocationSubstitute.class.getName(),
             PowerMockPolicy.class.getName(),
-            ClassReplicaCreator.class.getName() };
+            ClassReplicaCreator.class.getName()};
 
     /*
      * Classes that should always be deferred regardless of what the user
      * specifies in annotations etc.
      */
-    private static final String[] packagesToBeDeferred = new String[] { "org.hamcrest.*", "java.*",
+    private static final String[] packagesToBeDeferred = new String[]{"org.hamcrest.*", "java.*",
             "javax.accessibility.*", "sun.*", "org.junit.*",
             "junit.*", "org.pitest.*", "org.powermock.modules.junit4.common.internal.*",
             "org.powermock.modules.junit3.internal.PowerMockJUnit3RunnerDelegate*",
-            "org.powermock.core*", "org.jacoco.agent.rt.*" };
+            "org.powermock.core*", "org.jacoco.agent.rt.*"};
 
     private ClassPool classPool = new ClassPool();
 
     /**
      * Creates a new instance of the {@link MockClassLoader} based on the
      * following parameters:
-     * 
-     * @param classesToMock The classes that must be modified to prepare for testability.
+     *
+     * @param classesToMock   The classes that must be modified to prepare for testability.
      * @param packagesToDefer Classes in these packages will be defered to the system
-     *        class-loader.
+     *                        class-loader.
      */
     public MockClassLoader(String[] classesToMock, String[] packagesToDefer, UseClassPathAdjuster useClassPathAdjuster) {
         super(MockClassLoader.class.getClassLoader(), getPackagesToDefer(packagesToDefer));
@@ -122,10 +121,10 @@ public class MockClassLoader extends DeferSupportingClassLoader {
     /**
      * Creates a new instance of the {@link MockClassLoader} based on the
      * following parameters:
-     * 
-     * @param classesToMock The classes that must be modified to prepare for testability.
+     *
+     * @param classesToMock   The classes that must be modified to prepare for testability.
      * @param packagesToDefer Classes in these packages will be defered to the system
-     *        class-loader.
+     *                        class-loader.
      */
     public MockClassLoader(String[] classesToMock, String[] packagesToDefer) {
         this(classesToMock, packagesToDefer, null);
@@ -134,7 +133,7 @@ public class MockClassLoader extends DeferSupportingClassLoader {
     /**
      * Creates a new instance of the {@link MockClassLoader} based on the
      * following parameters:
-     * 
+     *
      * @param classesToMock The classes that must be modified to prepare for testability.
      */
     public MockClassLoader(String[] classesToMock, UseClassPathAdjuster useClassPathAdjuster) {
@@ -144,7 +143,7 @@ public class MockClassLoader extends DeferSupportingClassLoader {
     /**
      * Creates a new instance of the {@link MockClassLoader} based on the
      * following parameters:
-     * 
+     *
      * @param classesToMock The classes that must be modified to prepare for testability.
      */
     public MockClassLoader(String[] classesToMock) {
@@ -157,10 +156,10 @@ public class MockClassLoader extends DeferSupportingClassLoader {
      * contained in the {@link #packagesToBeDeferred} will be ignored. How ever
      * classes added here have precedence over additionally deferred (ignored)
      * packages (those ignored by the user using @PrepareForTest).
-     * 
+     *
      * @param classes The fully qualified name of the classes that will be appended
-     *        to the list of classes that will be byte-code modified to
-     *        enable testability.
+     *                to the list of classes that will be byte-code modified to
+     *                enable testability.
      */
     public void addClassesToModify(String... classes) {
         if (classes != null) {
@@ -174,6 +173,7 @@ public class MockClassLoader extends DeferSupportingClassLoader {
 
     protected Class<?> loadModifiedClass(String s) throws ClassFormatError, ClassNotFoundException {
         Class<?> loadedClass;
+
         deferTo.loadClass(s);
         if (shouldModify(s) && !shouldLoadWithMockClassloaderWithoutModifications(s)) {
             loadedClass = loadMockClass(s);
